#16 #17 #38 #33 [1125] 好啦來去吃飯 close #15

--- a/www/css/ons-view.css
+++ b/www/css/ons-view.css
@@ -114,3 +114,7 @@ ons-page ons-toolbar ons-toolbar-button .ion-navicon {
     top: calc(50% - 60px);
     left: calc(50% - 60px);
 }
+
+ons-toolbar + .page__background + .page__content {
+    top: 50px;
+}
