#14 [1125] input要用ng-modal，不能寫在value裡面 #16 #17 #38 #33

--- a/www/css/ons-view.css
+++ b/www/css/ons-view.css
@@ -118,3 +118,8 @@ ons-page ons-toolbar ons-toolbar-button .ion-navicon {
 ons-toolbar + .page__background + .page__content {
     top: 50px;
 }
+
+ons-page .bottom-bar-button {
+    cursor: pointer;
+    text-align: center;
+}
