1128 下一個問題 #54

--- a/www/css/ons-view.css
+++ b/www/css/ons-view.css
@@ -136,3 +136,8 @@ ons-tabbar {
 .right .more-button {
     cursor: pointer;
 }
+
+.ons-loading-placeholder {
+    position: absolute;
+    z-index: 1;
+}
