1128 下一個問題 close #54 這個也還好……

--- a/www/css/ons-view.css
+++ b/www/css/ons-view.css
@@ -120,6 +120,13 @@ ons-page ons-toolbar ons-toolbar-button .ion-navicon {
     left: calc(50% - 60px);
 }
 
+.ons-loading-placeholder .message {
+    position:fixed;
+    top: calc(50% + 60px);
+    text-align: center;
+    width: 100%;
+}
+
 ons-toolbar + .page__background + .page__content {
     top: 50px;
 }
