--- a/www/css/ons-view.css
+++ b/www/css/ons-view.css
@@ -8,6 +8,10 @@ ons-page ons-toolbar ons-toolbar-button .ion-navicon {
     vertical-align:-6px;
 }
 
+ons-page ons-toolbar .right {
+    line-height: 44px;
+}
+
 /**
  * 選單背景反白
  */
