--- a/www/css/ons-view.css
+++ b/www/css/ons-view.css
@@ -12,6 +12,10 @@ ons-page ons-toolbar .right {
     line-height: 44px;
 }
 
+#menu_html ons-list-item {
+    cursor: pointer;
+}
+
 /**
  * 選單背景反白
  */
