--- a/www/css/ons-view.css
+++ b/www/css/ons-view.css
@@ -117,8 +117,15 @@ ons-page ons-toolbar .right {
     }
     
     body:not(.main-full) #menu_html ons-toolbar .center,
-    body:not(.main-full) #menu_html ons-toolbar .left {
+    body:not(.main-full) #menu_html ons-toolbar .left,
+    body:not(.main-full) #menu_html .menu-heading {
         display:none;
+    }
+    
+    body:not(.main-full) #menu_html ons-list-item {
+        text-align: center;
+        width: 40px;
+        padding: 0;
     }
 }   /* @media screen and (min-width: 400px) and (max-width: 700px) { */
 
