1204 target_init跟target_edit都放上未完成目標 close #88

--- a/www/css/controller_target.css
+++ b/www/css/controller_target.css
@@ -18,9 +18,10 @@
 }
 
 .target-page .recommend {
-    border-top: 1px dashed #ddd;
+    font-size: small;
+    /*border-bottom: 1px dashed #ddd;*/
 }
 
-.target-page .recommend ons-row {
+.target-page ons-row.recommend {
     text-align: center;
 }
