1204 target_init跟target_edit都放上未完成目標 close #88

--- a/www/css/controller_target.css
+++ b/www/css/controller_target.css
@@ -3,7 +3,12 @@
 }
 
 .target-completed {
-    color: green;
+    color: #f0ad4e;
+}
+@media screen and (max-width: 550px) {
+    #menu_html .target-completed {
+        color: #F4FF77;
+    }
 }
 
 .target-page .target-help-modal .message {
