1204 menu在icon寬度時，保留setting的icon #89

--- a/www/pulipuli-utils/css/bootstrap.css
+++ b/www/pulipuli-utils/css/bootstrap.css
@@ -1,3 +1,6 @@
+/**
+ * http://getbootstrap.com/css/#buttons-options
+ */
 .btn-default {
     color: #333;
     background-color: #fff;
@@ -40,6 +43,9 @@
 }
 
 /* --------------------------- */
+/**
+ * http://getbootstrap.com/css/#helper-classes-backgrounds
+ */
 
 .bg-primary {
     color: #fff;
