1204 menu在icon寬度時，保留setting的icon #89

--- a/www/css/controller_learn_flashcard.css
+++ b/www/css/controller_learn_flashcard.css
@@ -6,14 +6,17 @@
     padding:1rem; 
     text-align: center;
     display: block;
-    background-color: white; 
     cursor: pointer
 
 }
 
+.learn-flashcard-page .flashcard .q {
+    background-color: white; 
+}
+
 .learn-flashcard-page .flashcard .a {
     border-top: 1px solid #DDD; 
-    background-color: #EEE;
+    /*background-color: #EEE;*/
 }
 
 ons-page .speak {
