--- a/www/pulipuli-utils/css/ons-view.css
+++ b/www/pulipuli-utils/css/ons-view.css
@@ -38,6 +38,10 @@ ons-page ons-toolbar .right {
     background-color: #666;
 }
 
+#menu_html .bottom-bar {
+    background-color: transparent;
+}
+
 /**
  * RWD
  */
@@ -119,9 +123,20 @@ ons-page ons-toolbar .right {
     body:not(.main-full) #menu_html ons-toolbar .center,
     body:not(.main-full) #menu_html ons-toolbar .left,
     body:not(.main-full) #menu_html .menu-heading,
-    body:not(.main-full) #menu_html .right,
-    body:not(.main-full) #menu_html .bottom-bar {
+    body:not(.main-full) #menu_html .right {
         display:none;
+    }
+    
+    body:not(.main-full) #menu_html .bottom-bar ons-col {
+        display: none;
+    }
+    
+    body:not(.main-full) #menu_html .bottom-bar {
+        width: 40px;
+    }
+    body:not(.main-full) #menu_html .bottom-bar ons-col:last-child {
+        display: block;
+        text-align: center;
     }
     
     body:not(.main-full) #menu_html ons-list-item {
