1204 menu在icon寬度時，保留setting的icon close close #89

--- a/www/pulipuli-utils/css/ons-view.css
+++ b/www/pulipuli-utils/css/ons-view.css
@@ -10,6 +10,7 @@ ons-page ons-toolbar ons-toolbar-button .ion-navicon {
 
 ons-page ons-toolbar .right {
     line-height: 44px;
+    padding-right: 10px; 
 }
 
 #menu_html ons-list-item {
