1204 Target complete 誤寫成 complate close #81 如果進度未達到100%才顯示通知 close #76

--- a/www/css/controller_target.css
+++ b/www/css/controller_target.css
@@ -5,9 +5,17 @@
 .target-completed {
     color: #f0ad4e;
 }
+
+.target-incompleted {
+    color: #d9534f;
+}
+
 @media screen and (max-width: 550px) {
     #menu_html .target-completed {
         color: #F4FF77;
+    }
+    #menu_html .target-incompleted {
+        color: #d9534f;
     }
 }
 
