1204 如果進度未達到100%才顯示通知 close #76

--- a/www/css/controller_target.css
+++ b/www/css/controller_target.css
@@ -15,7 +15,7 @@
         color: #F4FF77;
     }
     #menu_html .target-incompleted {
-        color: #d9534f;
+        color: #E08283;
     }
 }
 
