--- a/www/pulipuli-utils/css/ons.css
+++ b/www/pulipuli-utils/css/ons.css
@@ -9,3 +9,7 @@ label.checkbox input[type="checkbox"] {
 one-page .pre {
     white-space: pre;
 }
+
+.alert-dialog {
+    background-color: white;
+}
