0316 開始解決 note_list的問題

--- a/www/css/controller_target.css
+++ b/www/css/controller_target.css
@@ -38,3 +38,8 @@
 .target-page ons-row.recommend {
     text-align: center;
 }
+
+ons-icon[icon="ion-ios-minus-outline"],
+ons-icon[icon="ion-ios-plus-outline"] {
+    cursor: pointer;
+}
