--- a/www/css/controller_learn_flashcard.css
+++ b/www/css/controller_learn_flashcard.css
@@ -12,6 +12,7 @@
 
 .learn-flashcard-page .flashcard .q {
     background-color: white; 
+    /*display: flex;*/
 }
 
 .learn-flashcard-page .flashcard .a {
@@ -42,6 +43,10 @@ ons-page .speak.hide {
     overflow-y: auto;
 }
 
+.learn-flashcard-page .dictionary > ons-col {
+    display: inline-block !important;
+}
+
 .learn-flashcard-page .note .compose {
     float:left;
     font-size: 2rem;
@@ -63,5 +68,14 @@ ons-page .speak.hide {
 @media (max-height: 500px) {
     .learn-flashcard-page .dictionary ons-icon {
         display: none;
+    }
+    
+    .learn-flashcard-page .dictionary ons-button {
+        width:90%; 
+        white-space: initial;
+    }
+    
+    .learn-flashcard-page .dictionary ons-button div {
+        width: 90%;
     }
 }
