0429 想改LocalStorage的儲存方式

--- a/www/css/controller_target.css
+++ b/www/css/controller_target.css
@@ -3,7 +3,7 @@
 }
 
 .target-completed {
-    color: #5cb85c;
+    color: #5cb85c !important;
     /* http://getbootstrap.com/css/#less-variables-colors */
 }
 
