--- a/www/css/controller_test_select.css
+++ b/www/css/controller_test_select.css
@@ -62,6 +62,7 @@
     max-height: 10rem;
     overflow-y: auto;
     text-align: center;
+    cursor: pointer;
 }
 
 .test-select-page .result.correct {
